finalize getDetail of Cars

--- a/views/details.handlebars
+++ b/views/details.handlebars
@@ -3,7 +3,7 @@
 <title>Car model: {{msrp}}</title>
 {{! if..else block }}
 {{#if msrp}}
-<h2>Make : {{cars.make}}</h2>
+<h2>Make : {{make}}</h2>
 <h2>Model : {{model}}</h2>
 <h2>Engine : {{engine}}</h2>
 <h2>MPG : {{mpg}}</h2>
