--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
 <h2>THIS IS HOME PAGE!</h2>
 {{#each cars}}
- <li><a href="/detail?car={{msrp}}">Car : {{make}} {{model}}</a></li>
+ <li><a href="/detail?make={{make}}">Car : {{make}} {{model}}</a></li>
 {{/each}}
