connect to MongoDB and use Express Routes Integration

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,7 @@
 <h2>THIS IS HOME PAGE!</h2>
+
+
+
 {{#each cars}}
- <li><a href="/detail?make={{make}}">Car : {{make}} {{model}}</a></li>
+ <li><a href="/detail?make={{make}}">Car : {{this}}</a></li>
 {{/each}}
