connecting homepage with MongoDB items

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,8 @@
-<h2>THIS IS HOME PAGE!</h2>
+<h2>Choose A Car!</h2>
 
 
 
 {{#each cars}}
- <li><a href="/detail?make={{make}}">Car : {{this}}</a></li>
+ <li><a href="/detail?make={{make}}">Car : {{make}} {{model}}</a></li>
 {{/each}}
+
