--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,3 +6,5 @@
  <li><a href="/detail?make={{make}}">Car : {{make}} {{model}}</a></li>
 {{/each}}
 
+<h3><a href="/about">About page</a></h3>
+<h3><a href="/delete">Delete page</a></h3>
